# africanjokes

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py  test_basic.py
.github/workflows/: publish-to-pypi.yml  python-app.yml  python-package.yml
africanjokes/: __init__.py  cli.py  jokes.txt
africanjokes/data/: README.md  jokes.json
npm/: README.md  package.json
npm/src/: cli.js  index.js
npm/src/data/: proverbs.json
npm/test/: index.test.js
npm/types/: index.d.ts
tests/: test_cli.py  test_jokes.py  test_proverbs.py
tools/: check_pypirc.py  sync_data.mjs  validate_data.py
