[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "africanjokes"
version = "0.0.5"
description = "A library for African jokes"
authors = [
    { name = "Morris D. Toclo", email = "morristoclo@gmail.com" }
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.8"
keywords = ["jokes", "africa", "fun", "humor", "python"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Entertainment"
]

[project.urls]
GitHub = "https://github.com/daddysboy21"
AuthorWebsite = "https://daddysboy21.link"
Support = "https://buymeacoffee.com/PBEzMY14YC"