[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "africanjokes"
version = "1.2.0"
description = "African jokes and proverbs as a Python library and CLI."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
    { name = "Morris D. Toclo", email = "morristoclo@gmail.com" }
]
maintainers = [
    { name = "Morris D. Toclo", email = "morristoclo@gmail.com" }
]
keywords = ["jokes", "proverbs", "africa", "fun", "humor", "python", "cli"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Games/Entertainment",
    "Typing :: Typed"
]
dependencies = []

[project.optional-dependencies]
test = ["pytest>=7"]

[project.urls]
Homepage = "https://github.com/daddysboy21/africanjokes"
Author = "https://github.com/daddysboy21"
Website = "https://daddysboy21.link"
Funding = "https://buymeacoffee.com/PBEzMY14YC"
Source = "https://github.com/daddysboy21/africanjokes"
Tracker = "https://github.com/daddysboy21/africanjokes/issues"
Documentation = "https://github.com/daddysboy21/africanjokes/wiki"
License = "https://github.com/daddysboy21/africanjokes/blob/main/LICENSE"

[project.scripts]
africanjokes = "africanjokes.cli:main"

[tool.setuptools]
packages = ["africanjokes", "africanjokes.data"]

[tool.setuptools.package-data]
"africanjokes" = ["py.typed"]
"africanjokes.data" = ["*.json"]
